<resources>
    <string name="app_name">OnlyOfficeTest</string>
    <string name="documents">Documents</string>
    <string name="rooms">Rooms</string>
    <string name="trash">Trash</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="portal">Portal</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="connect_to_onlyoffice">Connect to ONLYOFFICE</string>
    <string name="error">Error</string>
    <string name="user_name">User Name</string>
    <string name="logout">Logout</string>
    <string name="try_again">Try again</string>
    <string name="nav_back">Назад</string>
    <string name="no_documents_yet">No documents yet</string>
</resources>